<resources>
    <string name="channel_name_userreq">User interaction required</string>
    <string name="channel_description_userreq">OpenVPN connection requires a user input, e.g. two factor authentification
    </string>
    <string name="channel_name_background">Connection statistics</string>
    <string name="channel_description_background">Ongoing statistics of the established OpenVPN connection</string>
    <string name="channel_name_status">Connection status change</string>
    <string name="channel_description_status">Status changes of the OpenVPN connection (Connecting, authenticating,…)</string>
    <string name="save_password">Save Password</string>
    <string name="show_password">Show password</string>
    <string name="auth_username">Username</string>
    <string name="remote_trust">I trust this application.</string>
    <string name="remote_warning">By proceeding, you are giving the application permission to completely control OpenVPN for Android and to intercept all network traffic.<b>Do NOT accept unless you trust the application.</b> Otherwise, you run the risk of having your data compromised by malicious software."</string>
    <string name="permission_icon_app">Icon of app trying to use OpenVPN for Android</string>
    <string name="state_user_vpn_permission" translatable="false">Waiting for user permission to use VPN API</string>
    <string name="config_error_found">Error in Configuration</string>
    <string name="nought_alwayson_warning"><![CDATA[If you did not get a VPN confirmation dialog, you have \"Always on VPN\" enabled for another app. In that case only that app is allowed to connect to a VPN. Check under Settings-> Networks more .. -> VPNS]]></string>
    <string name="state_user_vpn_password_cancelled" translatable="false">VPN password input dialog cancelled</string>
    <string name="pw_request_dialog_title">Need %s</string>
    <string name="pw_request_dialog_prompt">Please enter the password for profile %s</string>
    <string name="shortcut_profile_notfound">Profile specified in shortcut not found</string>
    <string name="app">Shellfire VPN for Android</string>
    <string name="prompt">%s attempts to control %2$s</string>
    <string name="all_app_prompt">An external app tries to control %s. The app requesting access cannot be determined. Allowing this app grants ALL apps access.</string>
    <string name="screen_nopersistenttun">Warning: Persistent tun not enabled for this VPN. Traffic will use the normal Internet connection when the screen is off.</string>
    <string name="private_key_password">Private Key Password</string>
    <string name="pkcs12_file_encryption_key">PKCS12 File Encryption Key</string>
    <string name="no_error_found">No error found</string>
    <string name="no_orbotfound">Orbot application cannot be found. Please install Orbot or use manual Socks v5 integration.</string>
    <string name="error_orbot_and_proxy_options">Cannot use extra http-proxy-option statement and Orbot integration at the same time</string>
    <string name="openvpn3_socksproxy">OpenVPN 3 C++ implementation does not support connecting via Socks proxy</string>
    <string name="openvpn3_nostatickeys">The OpenVPN 3 C++ implementation does not support static keys. Please change to OpenVPN 2.x under general settings.</string>
    <string name="openvpn3_pkcs12">Using PKCS12 files directly with OpenVPN 3 C++ implementation is not supported. Please import the pkcs12 files into the Android keystore or change to OpenVPN 2.x under general settings.</string>
    <string name="remote_no_server_selected">You need to define and enable at least one remote server.</string>
    <string name="missing_tlsauth">tls-auth file is missing</string>
    <string name="missing_certificates">Missing user certificate or user certifcate key file</string>
    <string name="missing_ca_certificate">Missing CA certificate</string>
    <string name="custom_route_format_error">Error parsing the custom routes</string>
    <string name="ipv4_format_error">Error parsing the IPv4 address</string>
    <string name="deprecated_tls_remote">Config uses option tls-remote that was deprecated in 2.3 and finally removed in 2.4</string>
    <string name="no_ca_cert_selected">You must select a CA certificate or enable peer fingerprint check</string>
    <string name="no_keystore_cert_selected">You must select a User certificate</string>
    <string name="keyChainAccessError">KeyChain Access error: %s</string>
    <string name="cannotparsecert">Cannot display certificate information</string>
    <string name="crtext_requested">Answer challenge to continue VPN authentication</string>
    <string name="openurl_requested">Open URL to continue VPN authentication</string>
    <string name="ip_looks_like_subnet">Vpn topology \"%3$s\" specified but ifconfig %s %2$s looks more like an IP address with a network mask. Assuming \"subnet\" topology.</string>
    <string name="allowed_vpn_apps_info">Allowed VPN apps: %s</string>
    <string name="disallowed_vpn_apps_info">Disallowed VPN apps: %s</string>
    <string name="app_no_longer_exists">Package %s is no longer installed, removing it from app allow/disallow list</string>
    <string name="no_allowed_app">No allowed app added. Adding ourselves (%s) to have at least one app in the allowed app list to not allow all apps</string>
    <string name="ignore_multicast_route">Ignoring multicast route: %s</string>
    <string name="routes_debug">VpnService routes installed: %s %2$s</string>
    <string name="state_auth_failed">Authentication failed</string>
    <string name="password">Password</string>
    <string name="state_waitorbot">Waiting for Orbot to start</string>
    <string name="service_restarted">Restarting OpenVPN Service (App crashed probably crashed or killed for memory pressure)</string>
    <string name="notifcation_title_notconnect">Not connected</string>
    <string name="permission_revoked">VPN permission revoked by OS (e.g. other VPN program started), stopping VPN</string>
    <string name="keychain_nocacert">No CA Certificate returned while reading from Android keystore. Authentication will probably fail.</string>
    <string name="abi_mismatch">Preferred native ABI precedence of this device (%s) and ABI reported by native libraries (%2$s) mismatch</string>
    <string name="jelly_keystore_alphanumeric_bug">Some versions of Android 4.1 have problems if the name of the keystore certificate contains non alphanumeric characters (like spaces, underscores or dashes). Try to reimport the certificate without special characters</string>
    <string name="keychain_access">Cannot access the Android Keychain Certificates. This can be caused by a firmware upgrade or by restoring a backup of the app/app settings. Please edit the VPN and reselect the certificate under basic settings to recreate the permission to access the certificate.</string>
    <string name="notifcation_title" translatable="false">Shellfire VPN - %s</string>
    <string name="volume_byte">%.0f B</string>
    <string name="volume_kbyte">%.1f kB</string>
    <string name="volume_mbyte">%.1f MB</string>
    <string name="volume_gbyte">%.1f GB</string>
    <string name="bits_per_second">%.0f bit/s</string>
    <string name="kbits_per_second">%.1f kbit/s</string>
    <string name="mbits_per_second">%.1f Mbit/s</string>
    <string name="gbits_per_second">%.1f Gbit/s</string>
    <string name="state_auth_pending">Authentication pending</string>
    <string name="reread_log">Reread (%d) log items from log cache file</string>
    <string name="state_waitconnectretry">Waiting %ss seconds between connection attempt</string>
    <string name="unhandled_exception">Unhandled exception: %s\n\n%2$s</string>
    <string name="unhandled_exception_context" translatable="false">%3$s: %s\n\n%2$s</string>
    <string name="routes_info_incl">Routes: %s %2$s</string>
    <string name="routes_info_excl">Routes excluded: %s %2$s</string>
    <string name="title_activity_login">Log in</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="register_process_registering">Register&#8230;</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_passwords_dont_match">The passwords don\'t match</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_settings">Settings</string>
    <string name="title_connect">Status</string>
    <string name="title_serverlist">Server list</string>
    <string name="title_locations">Locations</string>
    <string name="title_log">Log</string>
    <string name="title_billing">Premium</string>
    <string name="connect">Connect</string>
    <string name="route_rejected">Route rejected by Android</string>
    <string name="tun_error_helpful">On some custom ICS images the permission on /dev/tun might be wrong, or the tun module might be missing completely. For CM9 images try the fix ownership option under general settings</string>
    <string name="tun_open_error">Failed to open the tun interface</string>
    <string name="error">"Error: "</string>
    <string name="last_openvpn_tun_config">Opening tun interface:</string>
    <string name="local_ip_info">Local IPv4: %s/%2$d IPv6: %3$s MTU: %4$d</string>
    <string name="dns_server_info">DNS Server: %s, Domain: %2$s</string>
    <string name="routes_info">Routes: %s</string>
    <string name="routes_info6">Routes IPv6: %s</string>
    <string name="ip_not_cidr">Got interface information %s and %2$s, assuming second address is peer address of remote. Using /32 netmask for local IP. Mode given by OpenVPN is \"%3$s\".</string>
    <string name="selected_vpn">VPN</string>
    <string name="empty" translatable="false"></string>
    <string name="log">Application Log</string>
    <string name="sendToShellfire">Send Log to Shellfire</string>
    <string name="action_about">About Shellfire VPN</string>
    <string name="until">until</string>
    <string name="premium">Premium</string>
    <string name="premiumplus">Shellfire\nVPN</string>
    <string name="hours24">24 hours</string>
    <string name="month_1">1 month</string>
    <string name="monthly">monthly</string>
    <string name="yearly">yearly</string>
    <string name="cents99">0.99 Eur</string>
    <string name="cents199">1.99 Eur</string>
    <string name="cents495">4.95 Eur</string>
    <string name="cents995">9.95 Eur</string>
    <string name="cents395">3.95 Eur</string>
    <string name="cents795">7.95 Eur</string>
    <string name="cents3990">39.90 Eur</string>
    <string name="cents8490">84.90 Eur</string>
    <string name="buy">Buy</string>
    <string name="compare">Compare</string>
    <string name="singlePayment">single payment *</string>
    <string name="subscription">subscription **</string>
    <string name="note_payment_types">* credit card not required.\r\n
** credit card required; can be cancelled anytime via Google Play. \r\n
\r\n
pay with Paypal on our website: https://www.shellfire.co.uk/vpn</string>
    <string name="cobiCodeEnter">COMPUTER BILD Campaign</string>
    <string name="action_share">Share this App</string>
    <string name="action_rate">Rate</string>
    <string name="plans">My Plan</string>
    <string name="enter_your_message_to_Shellfire_here">Enter your message to Shellfire here...</string>
    <string name="choose_a_plan">Choose a Plan</string>
    <string name="logout">Logout</string>
    <string name="action_connection_mode">Connection Mode</string>
    <string name="action_select_vpn">Select VPN</string>
    <string name="action_send_log">Give Feedback</string>
    <string name="subscribeNewsletter">Subscribe to Newsletter</string>
    <string name="google_sign_in_confirmation_title">Google Sign-In Confirmation</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
</resources>