<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_about"
        android:orderInCategory="10"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_log"
        android:orderInCategory="15"
        android:title="@string/action_send_log"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="20"
        android:title="@string/action_rate"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="30"
        android:title="@string/action_share"
        app:showAsAction="never" />


    <item
        android:id="@+id/about_current_plan"
        android:orderInCategory="40"
        android:title="@string/plans"
        app:showAsAction="never" />,


    <item
        android:id="@+id/action_connection_mode"
        android:orderInCategory="50"
        android:title="@string/action_connection_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_select_vpn"
        android:orderInCategory="60"
        android:title="@string/action_select_vpn"
        app:showAsAction="never" />


    <item
        android:id="@+id/logout"
        android:orderInCategory="70"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
